test/fixtures/type-error/voidIf.ro

fun test(x: i32): i32 =
  if (x > 0) {
    1
  }